<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <ToggleButton
        android:id="@+id/DarkModeToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="Light Cells"
        android:textOn="Dark Cells"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rules_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:text="Rules"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DarkModeToggle" />

    <Button
        android:id="@+id/TopLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/gray"
        android:contentDescription="@string/top_left"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_turn_text" />

    <Button
        android:id="@+id/TopMiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/gray"
        android:contentDescription="@string/top_middle"
        android:text=""
        app:layout_constraintEnd_toStartOf="@+id/TopRight"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toEndOf="@+id/TopLeft"
        app:layout_constraintTop_toBottomOf="@+id/player_turn_text" />

    <Button
        android:id="@+id/TopRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/gray"
        android:contentDescription="@string/top_right"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_turn_text" />

    <Button
        android:id="@+id/MiddleLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:contentDescription="@string/middle_left"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TopLeft" />

    <Button
        android:id="@+id/MiddleMiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:contentDescription="@string/middle_middle"
        android:text=""
        app:layout_constraintEnd_toStartOf="@+id/MiddleRight"
        app:layout_constraintStart_toEndOf="@+id/MiddleLeft"
        app:layout_constraintTop_toBottomOf="@+id/TopMiddle" />

    <Button
        android:id="@+id/MiddleRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:contentDescription="@string/middle_right"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TopRight" />

    <Button
        android:id="@+id/BottomLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:contentDescription="@string/bottom_left"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MiddleLeft" />

    <Button
        android:id="@+id/BottomMiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:contentDescription="@string/bottom_middle"
        android:text=""
        app:layout_constraintEnd_toStartOf="@+id/BottomRight"
        app:layout_constraintStart_toEndOf="@+id/BottomLeft"
        app:layout_constraintTop_toBottomOf="@+id/MiddleMiddle" />

    <Button
        android:id="@+id/BottomRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        android:contentDescription="@string/bottom_right"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MiddleRight" />

    <TextView
        android:id="@+id/player_turn_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_1_turn_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/history_button" />

    <TextView
        android:id="@+id/hiddenTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_1_won_text"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_turn_text" />

    <Button
        android:id="@+id/history_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="History"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.276"
        app:layout_constraintStart_toEndOf="@+id/rules_button"
        app:layout_constraintTop_toBottomOf="@+id/DarkModeToggle" />

    <Button
        android:id="@+id/strategy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="Strategy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DarkModeToggle" />

    <TextView
        android:id="@+id/location_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="location"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BottomLeft" />

    <TextView
        android:id="@+id/state_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/state_text_view_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_text_view" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Sign in With Google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/state_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>



